--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <div style="text-align:center"><img src="/imagesdz/d.jpg" style="width:75%" alt="Avatar"></div>
+          <div style="text-align:center">
+            <br><br>
+            <img src="/imagesdz/d.jpg" style="width:75%" alt="Avatar">
+          </div>
           <div class="w3-display-bottomleft w3-container w3-text-black">
           </div>
         </div>
