--- a/index.html
+++ b/index.html
@@ -45,14 +45,16 @@ p {line-height: 2}
   <div class="w3-content">
     <h1 class="w3-center w3-text-grey"><b>Areli & David</b></h1>
     <img class="w3-round w3-grayscale-min" src="w3images/wedding_couple2.jpg" style="width:100%;margin:32px 0">
-    <p><i>Queridos amigos y familiares, 
-        <br> 
-Nos complace anunciar que nuestras estrellas se han alineado y nuestros caminos se han entrelazado en un momento mágico. El universo nos ha guiado hacia este día especial, y queremos compartirlo con todos ustedes.
+    <p><i> 
+        
+        Dios te damos gracias por el amor que has puesto en nuestros corazones. Ayúdanos a comprender,  a perdonar debilidades, aumenta nuestra fé y confianza en ti, haz que tu prudencia guíe nuestra vida y amor, Bendice Dios nuestro matrimonio con paz y felicidad y haz que nuestro amor sea fructífero para tu gloria, aquí y a la eternidad. 
+
 <br>
-En este viaje celestial, prometemos amarnos, apoyarnos y explorar juntos los misterios del cosmos. 
-<br> Que nuestras almas brillen como estrellas en la noche y que nuestra unión sea tan infinita como el universo mismo.
+Es de nuestro agrado invitarte a nuestra boda, sigue deslizando para conocer los detalles.
 <br> 
-Por favor, únanse a nosotros mientras celebramos el amor, la suerte y la eternidad.</i>
+<br> 
+
+</i>
     </p><br>
     <p class="w3-center"><a href="#wedding" class="w3-button w3-black w3-round w3-padding-large w3-large">Detalles de la boda</a></p>
   </div>
