--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Es de nuestro agrado invitarte a nuestra boda, sigue deslizando para conocer los
     <div class="w3-row">
       <div class="w3-half">
         <h2>Mesa de regalos</h2>
-        <p>Esperamos contar con tu presencia, aquí te dejamos la lista de regalos, sí gustas llevar tu regalo o comprarlo online será genial<br>
+        <p>Esperamos contar con tu presencia, sí gustas llevar tu regalo o comprarlo online será genial<br>
         <br>David Gonzalez
         <br>5579 0701 4633 5172
         <br>Banco Santander
@@ -126,8 +126,8 @@ Es de nuestro agrado invitarte a nuestra boda, sigue deslizando para conocer los
 
 
         <h2>Lista</h2>
-        <p>Para mesa de regalo Coppel envía un Whatsapp  <a href="https://wa.me/525528653646?text=Hola%20me%20compartes%20la%20liga%20de%20regalos%20soy%20_____" target="_blank">
-        <b>aquí </b></a> para solicitar la liga online<br>
+        <p>Para mesa de regalo de amazon da clic en el siguiente enlace  <a href="https://www.amazon.com.mx/wedding/registry/27HIP9AHO6DGD" target="_blank">
+        <b>Mesa de regalos Amazon </b></a>  <br>
         </p>
         <hr>
        
@@ -181,7 +181,10 @@ Es de nuestro agrado invitarte a nuestra boda, sigue deslizando para conocer los
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
-  <p>Powered by Dave
+  <p>Powered by Dave, cualquier duda contactame por  
+
+    <a href="https://wa.me/525528653646?text=Hola%20Soy....." target="_blank">
+      <b>mensaje de Whatsapp 5528653646</b></a> 
     <!-- <a href="https://dsadasdas" title="W3.CSS" target="_blank" class="w3-hover-text-green">Dave</a> -->
 </p>
 </footer>
