--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Es de nuestro agrado invitarte a nuestra boda, sigue deslizando para conocer los
             <b>Parroquia San Miguel Arcángel</b></a>
         </p>
         <hr>
-        <p>Salon - 4:00 pm a 11:00 pm <br>
+        <p>Salón - 4:00 pm a 11:00 pm <br>
         <a href="https://maps.app.goo.gl/3mWvuvpCFsce1s1HA" target="_blank">
             <b>Jardín Hacienda</b></a>
         </p>
@@ -114,10 +114,10 @@ Es de nuestro agrado invitarte a nuestra boda, sigue deslizando para conocer los
     <div class="w3-row">
       <div class="w3-half">
         <h2>Mesa de regalos</h2>
-        <p>Esperamos contar con tu presencia, sí gustas llevar tu regalo o comprarlo online será genial<br>
-        <br>David Gonzalez
+        <p>Esperamos contar con tu presencia, sí gustas llevar tu regalo o comprarlo online será genial o bien sí te es más comodo puedes transferir a la siguiente cuenta<br>
+        <b><br>David Gonzalez
         <br>5579 0701 4633 5172
-        <br>Banco Santander
+        <br>Banco Santander</b>
         </p>
         <hr>
       
@@ -126,8 +126,13 @@ Es de nuestro agrado invitarte a nuestra boda, sigue deslizando para conocer los
 
 
         <h2>Lista</h2>
-        <p>Para mesa de regalo de amazon da clic en el siguiente enlace  <a href="https://www.amazon.com.mx/wedding/registry/27HIP9AHO6DGD" target="_blank">
-        <b>Mesa de regalos Amazon </b></a>  <br>
+
+        <p>Para mesa de regalos Liverpool puedes acudir a la tienda departamental y da el siguiente Número de evento <b>51495854</b> para que puedas elegir el regalo  <br><br> O bien sí deseas hacer la compra en Liverpool online da clic en el siguiente enlace ->  <a href="https://mesaderegalos.liverpool.com.mx/milistaderegalos/51495854" target="_blank">
+          <b>Mesa de regalos Liverpool compra online</b></a>  <br>
+        </p>
+
+        <p>O bien sí tienes cuenta de Amazon puedes acceder a esta otra lista y hacer tu compra online <a href="https://www.amazon.com.mx/wedding/registry/27HIP9AHO6DGD" target="_blank">
+        <b>Mesa de regalos Amazon compra online</b></a>  <br>
         </p>
         <hr>
        
